--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <img class="img-responsive" src="images/slider_img.png" alt="#" />
                       <div class="slide_cont">
                         <div class="slider_cont_inner">
-                          <h3>Welcome To Rishi's Web App</h3>
+                          <h3>Welcome To Alladi Priyanka Web App</h3>
                         <p>Deployed & hosted on Azure using Ansible Infrastructure as a Service</p>
                         <a class="blue_bt" href="#">Read More</a>
                         </div>
